...
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_create_new_life_icon_36" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerImageSlider"
        android:layout_width="412dp"
        android:layout_height="309dp"
        android:layout_marginTop="20dp"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newLifeHeader">

    </androidx.viewpager2.widget.ViewPager2>

    <Button
        android:id="@+id/putNewAvatarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape"
        android:text="Продолжить"
        app:layout_constraintEnd_toEndOf="parent"
...
